--- a/themes/hugo-theme-learn/layouts/_default/list.html
+++ b/themes/hugo-theme-learn/layouts/_default/list.html
@@ -1,4 +1,5 @@
-{{ partial "header.html" . }} {{ .Content }}
+{{ partial "header.html" . }} 
+{{ .Content }}
 
 <footer class=" footline">
 	{{with .Params.LastModifierDisplayName}}
