--- a/layouts/partials/custom-footer.html
+++ b/layouts/partials/custom-footer.html
@@ -1,7 +1,7 @@
 
 <section id="body">
   <center style = "background-color:#ffffff;">
-    <p style="color:rgb(0, 0, 0);">©<span id="year" style="color:rgb(0, 0, 0)"></span>年著作权，盛波尔科技所有权。技术支持：James Zhang</p>
+    <p style="color:rgb(0, 0, 0);">©<span id="year" style="color:rgb(0, 0, 0)"></span>年著作权，盛波尔科技所有权。网站支持：James Zhang</p>
     <p style="margin:0;"><a style="color:black" href="http://www.senboll.com">www.senboll.com</a><p>
     <br/>
   </center>
