--- a/layouts/partials/page-update-data.html
+++ b/layouts/partials/page-update-data.html
@@ -1,6 +1,9 @@
-<h6 class="f4 dark-gray mb2">
-  <a href="{{ .Permalink }}" class="hide-child link primary-color">
-  <span class="nl3 child">{{ partial "svg/link-permalink.svg" (dict "size" "14px") }}</span>
-    “{{ .Title }}”
-  </a> was last updated: {{ .Lastmod.Format "January 2, 2006" }}{{ with .GitInfo }}: <a class="hide-child link primary-color" href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">{{ .Subject }} ({{ .AbbreviatedHash }})</a>{{end }}
-</h6>
+<div style="height:50px">
+<h5 align="center">
+  <a href="{{ .Permalink }}"></a> 
+  ( 更新时间:{{ .Lastmod.Format "2006年01月02日" }}，
+  {{ with .GitInfo }}
+    <a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>
+  {{end }})
+</h5>
+</div> 
