--- a/themes/hugo-theme-learn/layouts/index.html
+++ b/themes/hugo-theme-learn/layouts/index.html
@@ -4,6 +4,11 @@
 <a href="#" id="sidebar-toggle" data-sidebar-toggle=""><i class="fa fa-bars"></i> 导航</a>
 </span>
 
+<h1 id="枫叶在线帮助系统">枫叶在线帮助系统</h1>
+
+
+{{ partial "page-update-data.html" . }}
+
 {{if .Site.Home.Content }} 
 {{.Site.Home.Content}}	
 {{else}}         
