增加页脚网站链接

--- a/layouts/partials/custom-footer.html
+++ b/layouts/partials/custom-footer.html
@@ -1,8 +1,20 @@
 
 <section id="body">
   <center style = "background-color:#ffffff;">
-    <p style="color:rgb(0, 0, 0);">©<span id="year" style="color:rgb(0, 0, 0)"></span>年著作权，盛波尔科技所有权。网站支持：James Zhang</p>
-    <p style="margin:0;"><a style="color:black" href="http://www.senboll.com">www.senboll.com</a><p>
+    <p style="margin:0;">
+      <a href="http://www.paradox.com">英文官网</a> | 
+      <a href="http://www.senboll.com">中文官网</a> | 
+      <a href="http://support.senboll.com:8888/help">在线帮助中心</a> | 
+      <a href="http://support.senboll.com:8888">资料服务器</a> | 
+      <a href="http://support.senboll.com:8888/usage">枫叶相册</a> | 
+      <a href="http://support.senboll.com:8888/swan">枫叶APP代付费</a>
+    </p>
+    <p style="margin:0;">全国服务热线：400-002-5577 | 
+      <a href="contact.html">网站支持：James Zhang</a>
+    </p>
+    <p style="margin:0;color:rgb(0, 0, 0);">
+      ©<span id="year" style="color:rgb(0, 0, 0)"></span>年著作权，盛波尔科技所有权。
+    </p>
     <br/>
   </center>
 </section>
