--- a/themes/hugo-theme-learn/layouts/index.html
+++ b/themes/hugo-theme-learn/layouts/index.html
@@ -4,7 +4,7 @@
 <a href="#" id="sidebar-toggle" data-sidebar-toggle=""><i class="fa fa-bars"></i> 导航</a>
 </span>
 
-<h1 id="枫叶在线帮助系统">枫叶在线帮助系统</h1>
+<h1 id="枫叶在线帮助中心">枫叶在线帮助中心</h1>
 
 
 {{ partial "page-update-data.html" . }}
