1，添加枫叶APP新版本 2，优化一些内容

--- a/layouts/partials/custom-footer.html
+++ b/layouts/partials/custom-footer.html
@@ -1,23 +1,24 @@
 
 <section id="body">
-  <center style = "background-color:#ffffff;">
-    <p style="margin:0;">
+  <div class="footerinfo">
+    <br/>
+    <p align="center">
       <a href="http://www.paradox.com">英文官网</a> | 
       <a href="http://www.senboll.com">中文官网</a> | 
       <a href="http://support.senboll.com:8888/help">在线帮助中心</a> | 
       <a href="http://support.senboll.com:8888">资料服务器</a> | 
-      <a href="http://support.senboll.com:8888/usage">枫叶相册</a> | 
-      <a href="http://support.senboll.com:8888/swan">枫叶APP代付费</a>
-    </p>
-    <p style="margin:0;">全国服务热线：400-002-5577 | 
+      <a href="http://support.senboll.com:8888/usage">案例相册</a> | 
+      <a href="http://support.senboll.com:8888/swan">云服务缴费</a>
+      <br/>
+      全国服务热线：400-002-5577 | 
       <a href="contact.html">网站支持：James Zhang</a>
-    </p>
-    <p style="margin:0;color:rgb(0, 0, 0);">
-      ©<span id="year" style="color:rgb(0, 0, 0)"></span>年著作权，盛波尔科技所有权。
+      <br/>
+      ©<span id="year"></span>年著作权，盛波尔科技所有权。
     </p>
     <br/>
-  </center>
+  </div>
 </section>
+
 
 <script>
   function auto_copyright($year) {
