--- a/static/css/theme-mine.css
+++ b/static/css/theme-mine.css
@@ -1,4 +1,4 @@
-
+@charset "UTF-8";
 :root{
     
     --MAIN-TEXT-color:#323232; /* Color of text by default */
@@ -100,13 +100,4 @@ a:hover {
 
 #sidebar hr {
     border-color: var(--MENU-SECTION-HR-color);
-}
-
-.qrcode {
-    position: relative;
-    text-align: center;
-    color: #fff;
-    margin: 0 auto; /*水平居中*/
-    top: 50%; /*偏移*/
-    transform: translateY(-50%);
 }
