--- a/themes/hugo-theme-learn/layouts/partials/custom-header.html
+++ b/themes/hugo-theme-learn/layouts/partials/custom-header.html
@@ -1,5 +1,45 @@
-<!-- Partial intended to be overwritten to add custom headers, like CSS or any other info
+<!-- Partial intended to be overwritten to add custom headers, like CSS or any other info-->
 <style type="text/css">
     /* Custom css */
+    .footerinfo
+    {
+        font-size:1.0em;
+        bottom:0;
+        width:100%; 
+    }
+    .footerinfo a
+    {
+        white-space:nowrap;
+        color:#00bdf3;
+    }
+    .footerinfo p
+    {
+        bottom:0;
+        padding:0;
+        color:rgb(0, 0, 0);
+        width:100%; 
+    }
+
+@media only all and (max-width: 47.938em) {
+    .footerinfo
+    {
+        font-size: 0.8em;
+        background:#404041;
+        bottom:0;
+        width:100%; 
+    }
+    .footerinfo a
+    {
+        white-space:nowrap;
+        color:#00bdf3;
+    }
+    .footerinfo p
+    {
+        bottom:0;
+        padding:0;
+        color:rgb(255, 255, 255);
+        width:100%; 
+    }
+}
+    
 </style>
--->
