1，增加标签修改说明 2，增加一键报警功能设置说明 3，增加日志功能设置说明 4，增加布撤防失败说明 5，增加os3显示其他分区说明 6，优化一些内容

--- a/layouts/partials/custom-footer.html
+++ b/layouts/partials/custom-footer.html
@@ -11,7 +11,7 @@
       <a href="http://support.senboll.com:8888/swan">云服务缴费</a>
       <br/>
       全国服务热线：400-002-5577 | 
-      <a href="contact.html">网站支持：James Zhang</a>
+      <a href="http://support.senboll.com:8888/help/contact.html">网站支持：James Zhang</a>
       <br/>
       ©<span id="year"></span>年著作权，盛波尔科技所有权。
     </p>
