--- a/themes/hugo-theme-learn/static/css/hugo-theme.css
+++ b/themes/hugo-theme-learn/static/css/hugo-theme.css
@@ -167,9 +167,10 @@ h2 {
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 1.1rem;
   line-height: 110% !important;
   margin: 2rem 0 1rem 0;
+  font-weight: 400;
 }
 
 h4 {
