--- a/layouts/partials/custom-footer.html
+++ b/layouts/partials/custom-footer.html
@@ -8,7 +8,7 @@
       <a href="http://support.senboll.com:8888/help">在线帮助中心</a> | 
       <a href="http://support.senboll.com:8888">资料服务器</a> | 
       <a href="http://support.senboll.com:8888/usage">案例相册</a> | 
-      <a href="http://support.senboll.com:8888/swan">云服务缴费</a>
+      <a href="http://support.senboll.com:8888/swan">枫叶APP缴费</a>
       <br/>
       全国服务热线：400-002-5577 | 
       <a href="http://support.senboll.com:8888/help/contact.html">网站支持：James Zhang</a>
