--- a/layouts/partials/page-update-data.html
+++ b/layouts/partials/page-update-data.html
@@ -1,9 +1,8 @@
 <div style="height:50px">
 <h5 align="center">
-  <a href="{{ .Permalink }}"></a> 
   ( 更新时间:{{ .Lastmod.Format "2006年01月02日" }}，
-  {{ with .GitInfo }}
-    <a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>
-  {{end }})
-</h5>
+    {{ with .GitInfo }}
+      <a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>
+    {{end }}
+  )
 </div> 
