--- a/layouts/shortcodes/catalog-home.html
+++ b/layouts/shortcodes/catalog-home.html
@@ -2,7 +2,6 @@
     <li>
     {{ with .Site.GetPage "/node1" }}
         <a href="{{ .Permalink }}">{{ .Title }}</a> 
-        ( 更新时间:{{ .Lastmod.Format "2006年01月02日" }}，{{ with .GitInfo }}<a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>{{end}})
     {{end}}   
         <ul>
         <li>
@@ -60,7 +59,6 @@
     <li>
     {{ with .Site.GetPage "/node2" }}
         <a href="{{ .Permalink }}">{{ .Title }}</a> 
-        ( 更新时间:{{ .Lastmod.Format "2006年01月02日" }}，{{ with .GitInfo }}<a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>{{end}})
     {{end}}        
         <ul>
         <li>
@@ -96,6 +94,9 @@
         </ul>
     </li>
     <li> 
+    {{ with .Site.GetPage "/node3" }}
+        <a href="{{ .Permalink }}">{{ .Title }}</a> 
+    {{end}}
         <ul>
         <li>
             {{ with .Site.GetPage "/node3/hardware" }}
@@ -112,10 +113,17 @@
         </ul>
     </li>
     <li>
-        {{ with .Site.GetPage "/node9/privacy" }}
-            <a href="{{ .Permalink }}">{{ .Title }}</a> 
-            ( 更新时间:{{ .Lastmod.Format "2006年01月02日" }}，{{ with .GitInfo }}<a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>{{end}})
-        {{end}}
+    {{ with .Site.GetPage "/node9" }}
+        <a href="{{ .Permalink }}">{{ .Title }}</a> 
+    {{end}}
+        <ul>
+        <li>
+            {{ with .Site.GetPage "/node9/privacy" }}
+                <a href="{{ .Permalink }}">{{ .Title }}</a> 
+                ( 更新时间:{{ .Lastmod.Format "2006年01月02日" }}，{{ with .GitInfo }}<a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>{{end}})
+            {{end}}
+        </li>
+        </ul>
     </li>
     <li><a href="/help/paradox-frame/" class="highlight">系统拓扑图</a></li>
 </ul>
