--- a/layouts/shortcodes/catalog-home.html
+++ b/layouts/shortcodes/catalog-home.html
@@ -6,52 +6,92 @@
         <ul>
         <li>
             {{ with .Site.GetPage "/node1/important-knowledge" }}
+                {{ $lastmodify := .Lastmod.Format "2006年01月02日" }}
                 <a href="{{ .Permalink }}">{{ .Title }}</a> 
-                ( 更新时间:{{ .Lastmod.Format "2006年01月02日" }}，{{ with .GitInfo }}<a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>{{end}})
+                ( 更新:
+                {{ with .GitInfo }}
+                    <a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">{{$lastmodify}}</a>
+                {{end}}
+                )
             {{end}}
         </li>
         <li>
             {{ with .Site.GetPage "/node1/detector-installation-notes" }}
+                {{ $lastmodify := .Lastmod.Format "2006年01月02日" }}
                 <a href="{{ .Permalink }}">{{ .Title }}</a> 
-                ( 更新时间:{{ .Lastmod.Format "2006年01月02日" }}，{{ with .GitInfo }}<a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>{{end}})
+                ( 更新:
+                {{ with .GitInfo }}
+                    <a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">{{$lastmodify}}</a>
+                {{end}}
+                )
             {{end}}
         </li>
         <li>
             {{ with .Site.GetPage "/node1/wiring-method" }}
+                {{ $lastmodify := .Lastmod.Format "2006年01月02日" }}
                 <a href="{{ .Permalink }}">{{ .Title }}</a> 
-                ( 更新时间:{{ .Lastmod.Format "2006年01月02日" }}，{{ with .GitInfo }}<a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>{{end}})
+                ( 更新:
+                {{ with .GitInfo }}
+                    <a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">{{$lastmodify}}</a>
+                {{end}}
+                )
             {{end}}
         </li>
         <li>
             {{ with .Site.GetPage "/node1/must-keyboard" }}
+                {{ $lastmodify := .Lastmod.Format "2006年01月02日" }}
                 <a href="{{ .Permalink }}">{{ .Title }}</a> 
-                ( 更新时间:{{ .Lastmod.Format "2006年01月02日" }}，{{ with .GitInfo }}<a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>{{end}})
+                ( 更新:
+                {{ with .GitInfo }}
+                    <a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">{{$lastmodify}}</a>
+                {{end}}
+                )
             {{end}}
         </li>
         <li>
             {{ with .Site.GetPage "/node1/rf-radiation" }}
+                {{ $lastmodify := .Lastmod.Format "2006年01月02日" }}
                 <a href="{{ .Permalink }}">{{ .Title }}</a> 
-                ( 更新时间:{{ .Lastmod.Format "2006年01月02日" }}，{{ with .GitInfo }}<a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>{{end}})
+                ( 更新:
+                {{ with .GitInfo }}
+                    <a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">{{$lastmodify}}</a>
+                {{end}}
+                )
             {{end}}
         </li>
         <li>
             {{ with .Site.GetPage "/node1/intellizone" }}
+                {{ $lastmodify := .Lastmod.Format "2006年01月02日" }}
                 <a href="{{ .Permalink }}">{{ .Title }}</a> 
-                ( 更新时间:{{ .Lastmod.Format "2006年01月02日" }}，{{ with .GitInfo }}<a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>{{end}})
+                ( 更新:
+                {{ with .GitInfo }}
+                    <a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">{{$lastmodify}}</a>
+                {{end}}
+                )
             {{end}}
         </li>
         <li>
-                {{ with .Site.GetPage "/node1/lock-safety-analysis" }}
-                    <a href="{{ .Permalink }}">{{ .Title }}</a> 
-                    ( 更新时间:{{ .Lastmod.Format "2006年01月02日" }}，{{ with .GitInfo }}<a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>{{end}})
+            {{ with .Site.GetPage "/node1/lock-safety-analysis" }}
+                {{ $lastmodify := .Lastmod.Format "2006年01月02日" }}
+                <a href="{{ .Permalink }}">{{ .Title }}</a> 
+                ( 更新:
+                {{ with .GitInfo }}
+                    <a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">{{$lastmodify}}</a>
                 {{end}}
+                )
+            {{end}}
 
         </li>
         <li>
-                {{ with .Site.GetPage "/node1/life-detection" }}
-                    <a href="{{ .Permalink }}">{{ .Title }}</a> 
-                    ( 更新时间:{{ .Lastmod.Format "2006年01月02日" }}，{{ with .GitInfo }}<a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>{{end}})
+            {{ with .Site.GetPage "/node1/life-detection" }}
+                {{ $lastmodify := .Lastmod.Format "2006年01月02日" }}
+                <a href="{{ .Permalink }}">{{ .Title }}</a> 
+                ( 更新:
+                {{ with .GitInfo }}
+                    <a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">{{$lastmodify}}</a>
                 {{end}}
+                )
+            {{end}}
 
         </li>
         </ul>
@@ -63,32 +103,57 @@
         <ul>
         <li>
             {{ with .Site.GetPage "/node2/babyware" }}
+                {{ $lastmodify := .Lastmod.Format "2006年01月02日" }}
                 <a href="{{ .Permalink }}">{{ .Title }}</a> 
-                ( 更新时间:{{ .Lastmod.Format "2006年01月02日" }}，{{ with .GitInfo }}<a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>{{end}})
+                ( 更新:
+                {{ with .GitInfo }}
+                    <a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">{{$lastmodify}}</a>
+                {{end}}
+                )
             {{end}}
         </li>
         <li>
             {{ with .Site.GetPage "/node2/infield" }}
+                {{ $lastmodify := .Lastmod.Format "2006年01月02日" }}
                 <a href="{{ .Permalink }}">{{ .Title }}</a> 
-                ( 更新时间:{{ .Lastmod.Format "2006年01月02日" }}，{{ with .GitInfo }}<a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>{{end}})
+                ( 更新:
+                {{ with .GitInfo }}
+                    <a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">{{$lastmodify}}</a>
+                {{end}}
+                )
             {{end}}
         </li>
         <li>
             {{ with .Site.GetPage "/node2/insite-gold" }}
+                {{ $lastmodify := .Lastmod.Format "2006年01月02日" }}
                 <a href="{{ .Permalink }}">{{ .Title }}</a> 
-                ( 更新时间:{{ .Lastmod.Format "2006年01月02日" }}，{{ with .GitInfo }}<a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>{{end}})
+                ( 更新:
+                {{ with .GitInfo }}
+                    <a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">{{$lastmodify}}</a>
+                {{end}}
+                )
             {{end}}   
         </li>
         <li>
             {{ with .Site.GetPage "/node2/paradox-to-control4-driver" }}
+                {{ $lastmodify := .Lastmod.Format "2006年01月02日" }}
                 <a href="{{ .Permalink }}">{{ .Title }}</a> 
-                ( 更新时间:{{ .Lastmod.Format "2006年01月02日" }}，{{ with .GitInfo }}<a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>{{end}})
+                ( 更新:
+                {{ with .GitInfo }}
+                    <a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">{{$lastmodify}}</a>
+                {{end}}
+                )
             {{end}}
         </li>
         <li>
             {{ with .Site.GetPage "/node2/anydesk" }}
+                {{ $lastmodify := .Lastmod.Format "2006年01月02日" }}
                 <a href="{{ .Permalink }}">{{ .Title }}</a> 
-                ( 更新时间:{{ .Lastmod.Format "2006年01月02日" }}，{{ with .GitInfo }}<a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>{{end}})
+                ( 更新:
+                {{ with .GitInfo }}
+                    <a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">{{$lastmodify}}</a>
+                {{end}}
+                )
             {{end}}
         </li>
         </ul>
@@ -100,14 +165,24 @@
         <ul>
         <li>
             {{ with .Site.GetPage "/node3/hardware" }}
+                {{ $lastmodify := .Lastmod.Format "2006年01月02日" }}
                 <a href="{{ .Permalink }}">{{ .Title }}</a> 
-                ( 更新时间:{{ .Lastmod.Format "2006年01月02日" }}，{{ with .GitInfo }}<a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>{{end}})
+                ( 更新:
+                {{ with .GitInfo }}
+                    <a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">{{$lastmodify}}</a>
+                {{end}}
+                )
             {{end}}
         </li>
         <li>
         {{ with .Site.GetPage "/node3/software" }}
+            {{ $lastmodify := .Lastmod.Format "2006年01月02日" }}
             <a href="{{ .Permalink }}">{{ .Title }}</a> 
-            ( 更新时间:{{ .Lastmod.Format "2006年01月02日" }}，{{ with .GitInfo }}<a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>{{end}})
+            ( 更新:
+            {{ with .GitInfo }}
+                <a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">{{$lastmodify}}</a>
+            {{end}}
+            )
         {{end}}
         </li>
         </ul>
@@ -119,11 +194,17 @@
         <ul>
         <li>
             {{ with .Site.GetPage "/node9/privacy" }}
+                {{ $lastmodify := .Lastmod.Format "2006年01月02日" }}
                 <a href="{{ .Permalink }}">{{ .Title }}</a> 
-                ( 更新时间:{{ .Lastmod.Format "2006年01月02日" }}，{{ with .GitInfo }}<a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">更新日志</a>{{end}})
+                ( 更新:
+                {{ with .GitInfo }}
+                    <a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">{{$lastmodify}}</a>
+                {{end}}
+                )
             {{end}}
         </li>
         </ul>
     </li>
     <li><a href="/help/paradox-frame/" class="highlight">系统拓扑图</a></li>
 </ul>
+
