--- a/layouts/shortcodes/file-tree.html
+++ b/layouts/shortcodes/file-tree.html
@@ -1,25 +1,23 @@
 {{ $currentNode := . }}
 {{ $showvisitedlinks := .Site.Params.showVisitedLinks }}
-<div id="header-wrapper-">
-	<div id="header">
-	</div>
-</div>
-<div class="highlightable-">
-	<ul class="topics-">			
+{{ $site := .Site.Params.ghrepo }}
+
+<div class="highlightable">
+	<ul class="topics">			
 		{{if eq .Site.Params.ordersectionsby "title"}}  
 			{{range .Site.Home.Sections.ByTitle}}
-				{{ template "section-tree-nav-" dict "sect" . "currentnode" $currentNode "showvisitedlinks" $showvisitedlinks}}
+				{{ template "section-tree-nav-" dict "sect" . "currentnode" $currentNode "showvisitedlinks" $showvisitedlinks "site" $site}}
 			{{end}}
 		{{else}}
 			{{range .Site.Home.Sections.ByWeight}}
-				{{ template "section-tree-nav-" dict "sect" . "currentnode" $currentNode "showvisitedlinks" $showvisitedlinks}}
+				{{ template "section-tree-nav-" dict "sect" . "currentnode" $currentNode "showvisitedlinks" $showvisitedlinks "site" $site}}
 			{{end}}
 		{{end}} 
 	</ul>
 
 	{{ $disableShortcutsTitle := .Site.Params.DisableShortcutsTitle}}
 	{{with .Site.Menus.shortcuts}}
-		<section id="shortcuts-">
+		<section id="shortcuts">
 		<h3>{{ if not $disableShortcutsTitle}}{{ T "Shortcuts-Title"}}{{ end }}</h3>
 		<ul>
 			{{ range sort . "Weight"}}
@@ -35,6 +33,7 @@
 <!-- templates -->
 {{ define "section-tree-nav-" }}
  {{ $showvisitedlinks := .showvisitedlinks }}
+ {{ $site := .site }}
  {{ $currentNode := .currentnode }}
  {{with .sect}}
   {{if .IsSection}}
@@ -50,6 +49,7 @@
 				<i class="fa fa-check- read-icon"></i>
 			{{ end }}
 		</a>
+
       
 		{{ $numberOfPages := (add (len .Pages) (len .Sections)) }}
 		{{ if ne $numberOfPages 0 }} 
@@ -67,15 +67,15 @@
 					{{end}}
 				{{ end }}
 			{{else}}
-					{{ if and .Params.hidden (not $.showhidden) }} 
-					{{else}}
-						{{ $lastmodify := .Lastmod.Format "2006/01/02" }}
-						( 更新:
-						{{ with .GitInfo }}
-							<a href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">{{$lastmodify}}</a>
-						{{end}}
-						)
+				{{ if and .Params.hidden (not $.showhidden) }} 
+				{{else}}
+					{{ $lastmodify := .Lastmod.Format "2006/01/02" }}
+					( 更新:
+					{{ with .GitInfo }}
+						<a href="{{ $site }}commit/{{ .Hash }}">{{$lastmodify}}</a>
 					{{end}}
+					)
+				{{end}}
 			{{end}} 
 		{{end}}  
           
@@ -93,14 +93,14 @@
 					{{ range $pages.ByTitle }}
 					{{ if and .Params.hidden (not $.showhidden) }} 
 					{{else}}
-					{{ template "section-tree-nav-" dict "sect" . "currentnode" $currentNode "showvisitedlinks" $showvisitedlinks }}
+					{{ template "section-tree-nav-" dict "sect" . "currentnode" $currentNode "showvisitedlinks" $showvisitedlinks "site" $site }}
 					{{end}}
 					{{ end }}
 				{{else}}
 					{{ range $pages.ByWeight }}
 					{{ if and .Params.hidden (not $.showhidden) }} 
 					{{else}}
-					{{ template "section-tree-nav-" dict "sect" . "currentnode" $currentNode "showvisitedlinks" $showvisitedlinks }}
+					{{ template "section-tree-nav-" dict "sect" . "currentnode" $currentNode "showvisitedlinks" $showvisitedlinks "site" $site }}
 					{{end}}
 					{{ end }}
 				{{end}}
