--- a/themes/hugo-theme-learn/layouts/index.html
+++ b/themes/hugo-theme-learn/layouts/index.html
@@ -5,6 +5,7 @@
 </span>
 
 <h1 id="枫叶在线帮助中心">枫叶在线帮助中心</h1>
+{{ partial "page-update-data.html" . }}
 
 {{if .Site.Home.Content }} 
 {{.Site.Home.Content}}	
