--- a/themes/hugo-theme-learn/static/css/hugo-theme.css
+++ b/themes/hugo-theme-learn/static/css/hugo-theme.css
@@ -253,3 +253,7 @@ figcaption h4 {
 .is-sticky #top-bar {
   box-shadow: -1px 2px 5px 1px rgba(0, 0, 0, 0.1); 
 }
+
+table {
+  table-layout: fixed;
+}
