--- a/themes/hugo-theme-learn/static/css/nucleus.css
+++ b/themes/hugo-theme-learn/static/css/nucleus.css
@@ -172,9 +172,9 @@ tr, td, th {
 
 th, td {
   padding: 0.425rem 0; }
-
+/*
 th {
-  text-align: left; }
+  text-align: left; }*/
 
 .container {
   width: 75em;
