--- a/themes/hugo-theme-learn/static/css/theme.css
+++ b/themes/hugo-theme-learn/static/css/theme.css
@@ -461,7 +461,7 @@ h3 {
     color: #5603b6;
 }
 h4 {
-    color: #048f99;
+    color: #00a10d;
 }
 h1 {
     font-family: "Work Sans", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
