--- a/layouts/shortcodes/file-tree.html
+++ b/layouts/shortcodes/file-tree.html
@@ -18,7 +18,7 @@
 	{{ $disableShortcutsTitle := .Site.Params.DisableShortcutsTitle}}
 	{{with .Site.Menus.shortcuts}}
 		<section id="shortcuts">
-		<h3>{{ if not $disableShortcutsTitle}}{{ T "Shortcuts-Title"}}{{ end }}</h3>
+		<p>{{ if not $disableShortcutsTitle}}{{ T "Shortcuts-Title"}}{{ end }}</p>
 		<ul>
 			{{ range sort . "Weight"}}
 				<li> 
