--- a/themes/hugo-theme-learn/layouts/partials/menu.html
+++ b/themes/hugo-theme-learn/layouts/partials/menu.html
@@ -27,7 +27,7 @@
     {{ $disableShortcutsTitle := .Site.Params.DisableShortcutsTitle}}
     {{with .Site.Menus.shortcuts}}
       <section id="shortcuts">
-        <h3>{{ if not $disableShortcutsTitle}}{{ T "Shortcuts-Title"}}{{ end }}</h3>
+        <!--<p style="margin: 0 1rem;font-size: 1.1rem; color: #ccc;"> {{ if not $disableShortcutsTitle}}{{ T "Shortcuts-Title"}}{{ end }}</p>-->
         <ul>
           {{ range sort . "Weight"}}
               <li> 
