--- a/themes/hugo-theme-learn/static/css/hugo-theme.css
+++ b/themes/hugo-theme-learn/static/css/hugo-theme.css
@@ -258,6 +258,42 @@ figcaption h4 {
 table {
   table-layout: fixed;
 }
-th {
-  /* text-align: left; */
+
+
+/* 文章编号 */
+
+h1 {
+    counter-reset: one;  /* 创建一个计数器 */
+}
+
+h2 {
+    counter-reset: two;
+}
+h2:before {
+    counter-increment: one; /* 自动将计数器加 1 */
+    content: counter(one) ". "; /* 获取计数器值，把它填写在 content 中 */
+}
+
+h3 {
+    counter-reset: three;
+}
+h3:before {
+    counter-increment: two;
+    content: counter(one) "." counter(two) " ";
+}
+
+h4 {
+    counter-reset: four;
+}
+h4:before {
+    counter-increment: three;
+    content: counter(one) "." counter(two) "." counter(three) " ";
+}
+
+h5 {
+    counter-reset: five;
+}
+h5:before {
+    counter-increment: four;
+    content: counter(one) "." counter(two) "." counter(three) "." counter(four) " ";
 }
