--- a/assets/output/css/app.css
+++ b/assets/output/css/app.css
@@ -4619,7 +4619,7 @@ h6:hover .header-link {
 
   border-left-width: 4px;
   border-left-style: solid;
-  position: relative;
+  /* position: relative; */
   border-color: #0594CB;
 
   display: block;
