--- a/assets/output/css/app.css
+++ b/assets/output/css/app.css
@@ -4956,24 +4956,23 @@ small, .font_small {font-size: 0.8em;}
     border-collapse: collapse;
     border-spacing: 0;
     font-size: 1em;
-    border: 1px solid #eee
-
+    border: 1px solid rgb(1, 102, 102)
 }
 .prose table th {
-  background-color: #0594CB;
-  border-bottom: 1px solid #0594CB;
+  background-color: rgb(1, 102, 102);
+  border: 1px solid rgb(1, 102, 102);
   color: white;
   font-weight: 400;
   text-align: left;
-  padding: .375em .5em;
+  padding: .25em .5em;
 }
 .prose table td, .prose table tc {
-  padding: .75em .5em;
+  padding: .25em .5em;
   text-align: left;
-  border-right: 1px solid #eee;
+  border: 1px solid #0594CB;
 }
 .prose table tr:nth-child(even) {
-  background-color: #eee;
+  background-color: rgb(255, 255, 255);
 }
 dl dt {
   font-weight: bold;
