--- a/layouts/partials/docs/page-meta-data.html
+++ b/layouts/partials/docs/page-meta-data.html
@@ -1,5 +1,18 @@
-<p class="f4 dark-gray mb2">
-  <a href="{{ .Permalink }}" class="hide-child link primary-color">
-  <span class="nl3 child">{{ partial "svg/link-permalink.svg" (dict "size" "14px") }}</span>    
-  </a> 更新时间: {{ .Lastmod.Format "2006年1月2日" }}{{ with .GitInfo }}: <a class="hide-child link primary-color" href="{{$.Site.Params.ghrepo}}commit/{{ .Hash }}">{{ .Subject }} ({{ .AbbreviatedHash }})</a>{{end }}
+<p class="f4 dark-gray mb2"> 
+    <a href="{{ .Permalink }}" class="hide-child link primary-color pl2 pr2">
+      {{ .Name}}
+      <span class="fill-current hover-accent-color-light">
+        {{ partial "svg/link-permalink.svg" (dict "size" "16px") }}
+      </span>    
+    </a>    
+    {{ $lastmodify := .Lastmod.Format "2006年1月2日" }}
+    更新时间:
+    {{ with .GitInfo }}
+      <a class="hide-child link primary-color" href="{{ $.Site.Params.ghrepo }}commit/{{ .Hash }}">
+        {{$lastmodify}}
+        <span class="fill-current hover-accent-color-light">
+          {{ partial "svg/link-permalink.svg" (dict "size" "16px") }}
+        </span>    
+      </a>
+    {{end}}
 </p>
