--- a/layouts/partials/custom-footer.html
+++ b/layouts/partials/custom-footer.html
@@ -23,7 +23,7 @@
     var $sty = $year.toString();
     if ($currentyear > $year) {
       document.getElementById("year").innerHTML=$sty + ' - ' + $cty;
-      console.log($cty);
+      // console.log($cty);
     } else {
       document.getElementById("year").innerHTML = $cty;
     }
