--- a/layouts/partials/site-nav.html
+++ b/layouts/partials/site-nav.html
@@ -40,7 +40,7 @@
 </nav>
 
 
-<nav class="bg-primary-color-dark  w-100" role="navigation">  
+<nav class="bg-primary-color-dark fixed w-100" role="navigation">  
     <div class="top-0 dn-l w-100  ">
         {{- partial "nav-mobile.html" . -}}
     </div>
