--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,11 +2,7 @@
 <html class="no-js" lang="{{ with $.Site.LanguageCode }}{{ . }}{{ else }}en-us{{ end }}">
   <head>
     <meta charset="utf-8">
-    {{/* https://www.zachleat.com/web/preload/ */}}
-    <link rel="preload" href="{{ "fonts/muli-latin-200.woff2" | absURL }}" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="{{ "fonts/muli-latin-400.woff2" | absURL }}" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="{{ "fonts/muli-latin-800.woff2" | absURL }}" as="font" type="font/woff2" crossorigin>
-
+    
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
      {{/* NOTE: the Site's title, and if there is a page title, that is set too */}}
     <title>{{ block "title" . }}{{ with .Title }}{{ . }} | {{ end }}{{ .Site.Title }}{{ end }}</title>
@@ -39,7 +35,7 @@
       {{- template "_internal/opengraph.html" . -}}
       {{- template "_internal/google_news.html" . -}}
       {{- template "_internal/schema.html" . -}}
-      {{- template "_internal/twitter_cards.html" . -}}
+      <!-- {{- template "_internal/twitter_cards.html" . -}} -->
 
       {{ if eq (getenv "HUGO_ENV") "production" | or (eq .Site.Params.env "production")  }}
         {{ partial "gtag" . }}
@@ -56,7 +52,9 @@
       {{ block "main" . }}{{ end }}
     </main>
 
-    {{ block "footer" . }}{{ partialCached "site-footer.html" . }}{{ end }}
+    {{ block "footer" . }}
+      {{ partialCached "site-footer.html" . }}
+    {{ end }}
     
 
   </body>
