--- a/layouts/partials/nav-mobile.html
+++ b/layouts/partials/nav-mobile.html
@@ -1,5 +1,5 @@
 <div class="dn-l justify-between bg-black-90 w-100 h-auto">
-  <button id="mobilemenu" onclick="mobilemenu()"  class="js-toggle querybtn v-mid flex-auto dib dn-l f3 tl db ph3 white bg-transparent bn w-10" data-target=".globalmenu" style="font-family:segmdl2">&#xE700</button>
+  <button id="mobilemenu" onclick="mobilemenu()"  class="js-toggle querybtn v-mid link flex-auto dib dn-l f3 tl db ph3 white bg-transparent bn w-10" data-target=".globalmenu" style="font-family:segmdl2">&#xE700</button>
 
   <div class="link flex-auto dib db dn-l tc v-mid w-80">
         {{ partial "svg/senboll-logo.svg" (dict "size" "32px" "class" "v-mid pt1 pb1") }}
