--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-primary-color-dark ph4-ns pt4 relative w-100 f7 f5-l" role="contentinfo">
+<footer class="bg-primary-color-dark ph4-ns pt4 w-100 f7 f5-l" role="contentinfo">
      
   {{ partial "custom-footer.html" }}  
 
