--- a/layouts/partials/site-nav.html
+++ b/layouts/partials/site-nav.html
@@ -39,9 +39,8 @@
   </div>
 </nav>
 
-
-<nav class="bg-primary-color-dark fixed w-100" role="navigation">  
-    <div class="top-0 dn-l w-100  ">
+<nav class="w-100 bg-primary-color-dark fixed overflow-y-scroll">  
+    <div class="top-0 dn-l w-100">
         {{- partial "nav-mobile.html" . -}}
     </div>
 </nav>
