--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,11 +1,9 @@
 {{ define "main" }}
   <article class="w-100 ph4 pb5 pb6-ns pt1 pt5-ns">
     <div class="flex-l mt5">
-
-      <div class="order-2 w-100 w-20-l ph5-m ph0-l mb4 sticky">
-      {{- partial "toc.html" . -}}
+      <div class="order-0 w-20 dn db-l">
+        {{ partial "nav-links-docs.html" . }}
       </div>
-
       <div class="order-1 w-100 w-60-l ph0 ph5-ns mid-gray nested-copy-line-height no-underline nested-links nested-img nested-copy-seperator nested-blockquote mt0-ns">
         <div class="documentation-copy center w-100">
           <div id="readout" class="fixed right-0 bottom-0">
@@ -13,11 +11,10 @@
           {{ .Render "page" }}
           {{ partial "related.html" . }}
         </div>
+      </div>      
+      <div class="order-2 w-100 w-20-l ph5-m ph0-l mb4 fixed right-0">
+      {{- partial "toc.html" . -}}
       </div>
-      <div class="order-0 w-20 dn db-l">
-        {{ partial "nav-links-docs.html" . }}
-      </div>
-
     </div>
   </article>
 
