--- a/layouts/partials/site-nav.html
+++ b/layouts/partials/site-nav.html
@@ -1,7 +1,7 @@
 {{ $currentPage := . }}
 <nav class="bg-primary-color-dark fixed pv4 w-100 dn dib-l" role="navigation">
 
-  <div class="center flex-ns  flex-wrap items-center justify-start mw9">
+  <div class="center flex-ns w-90-ns w-90 w-90-l flex-wrap items-center justify-start">
     
     <h1 class="dim f4 lh-solid ml0-ns mr0 mr4-l mv0 pl3 pl4-ns dn dib-l">
       <a href="{{ .Site.BaseURL }}" class="link white">
