--- a/layouts/partials/home-page-sections/features-single.html
+++ b/layouts/partials/home-page-sections/features-single.html
@@ -2,14 +2,8 @@
   {{ range .Params.sections }}
   {{ $.Scratch.Add "i" 1 }}{{ $i := $.Scratch.Get "i" }}
 
-    <section class="w-100  ph4 ph5-ns pv4 pv6-ns mid-gray {{ .color_classes }}">
+    <section class="w-100  ph4 ph5-ns pv6 pv6-ns mid-gray {{ .color_classes }}">
       <div class="flex-ns flex-wrap center mw9">
-
-        <div class="w-100 {{ if modBool $i 2 }}order-1{{ else }}order-0{{ end }}">
-          <div class="w-80-ns center">
-            <img src="{{ .image }}" alt="image depicting an example of {{ .heading }}" class="img shadow-0">
-          </div>
-        </div>
 
         <div class="w-100">
           <div class="w-80-ns center tc">
@@ -17,11 +11,17 @@
             <p class="f4 f4-l lh-copy">
               {{ .copy }}
             </p>
-              <p class="f4 f4-l lh-copy nested-linksTK">
+<!--               <p class="f4 f4-l lh-copy nested-linksTK">
                 <a href="{{ .link | absURL }}" class="link black dim">
                   {{ .cta }} {{ partial "svg/link-ext.svg" (dict "fill" "#333" "size" "14") }}
                 </a>
-              </p>
+              </p> -->
+          </div>
+        </div>
+
+        <div class="w-100 {{ if modBool $i 2 }}order-1{{ else }}order-0{{ end }}">
+          <div class="w-80-ns center">
+            <img src="{{ .image }}" alt="image depicting an example of {{ .heading }}" class="img shadow-0">
           </div>
         </div>
 
