--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,6 +2,10 @@
   <article class="w-100 ph4 pb5 pb6-ns pt1 pt5-ns">
     <div class="flex-l mt5">
 
+        <div class="order-2 w-100 w-20-l ph5-m ph0-l mb4 sticky">
+          {{- partial "toc.html" . -}}
+        </div>
+
       <div class="order-0 w-20 dn db-l">
         {{ partial "nav-links-docs.html" . }}
       </div>
@@ -13,10 +17,6 @@
           {{ .Render "page" }}
           {{ partial "related.html" . }}
         </div>
-      </div>
-
-      <div class="order-2 w-100 w-20-l ph5-m ph0-l mb4 sticky overflow-y-scroll">
-        {{- partial "toc.html" . -}}
       </div>
 
     </div>
