--- a/layouts/partials/nav-links-global-mobile.html
+++ b/layouts/partials/nav-links-global-mobile.html
@@ -13,7 +13,7 @@
           {{ .Name }}
         </a>
         {{if eq .Name "文档中心"  }}
-          <ul class="list dib ph1 ma0 scrolling-touch tc">
+          <ul class="list dib pl3 scrolling-touch tc">
             {{ range $menuDocs }}{{ $post := printf "%s" .Post }}
               <li  class="tl dib ma0 hover-bg-black w-100">
                   <a href="{{.URL}}" class="ttu f6 link primary-color-light  hover-white db brand-font mb1 ma0 w-100 pv1 ph4{{if $currentPage.IsMenuCurrent "main" . }} bg-primary-color{{end}}">
