--- a/layouts/partials/site-nav.html
+++ b/layouts/partials/site-nav.html
@@ -1,5 +1,5 @@
 {{ $currentPage := . }}
-<nav class="bg-primary-color-dark fixed pv4 w-100 dn dib-l" role="navigation">
+<nav class="bg-primary-color-dark fixed pv4 w-100 dn dib-l bb b--dark-gray" role="navigation">
 
   <div class="center flex-ns w-90-ns w-90 w-90-l flex-wrap items-center justify-start">
     
