--- a/layouts/partials/nav-mobile.html
+++ b/layouts/partials/nav-mobile.html
@@ -1,4 +1,4 @@
-<div class="dn-l justify-between bg-black-90 w-100 h-auto">
+<div class="dn-l justify-between bg-primary-color-dark w-100 h-auto">
   <button id="mobilemenu" onclick="mobilemenu()"  class="js-toggle querybtn v-mid link flex-auto dib dn-l f3 tl db ph3 white bg-transparent bn w-10" data-target=".globalmenu" style="font-family:segmdl2">&#xE700</button>
 
   <div class="link flex-auto dib db dn-l tc v-mid w-80">
@@ -9,7 +9,7 @@
 </div>
 
 
-<div  class="globalmenu mobilemenu pb2 dn bg-black-90 w-auto vh-100">
+<div  class="globalmenu mobilemenu pb2 dn bg-primary-color-dark w-auto vh-100">
   {{ partial "nav-links-global-mobile.html" . }}
 </div>
 <!-- 
