--- a/layouts/partials/docs/page-meta-data.html
+++ b/layouts/partials/docs/page-meta-data.html
@@ -1,4 +1,4 @@
-<p class="f4 dark-gray mb2"> 
+<p class="f4 dark-gray mb2 tc"> 
     <a href="{{ .Permalink }}" class="hide-child link primary-color pl2 pr2">
       {{ .Name}}
       <span class="fill-current hover-accent-color-light">
