--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,7 @@
   <article class="w-100 ph4 pb5 pb6-ns pt1 pt5-ns">
     <div class="flex-l mt5">
 
-        <div class="order-2 w-100 w-20-l ph5-m ph0-l mb4 sticky">
+        <div class="order-2 w-100 w-20-l ph5-m ph0-l mb4 fixed-l right-0-l">
           {{- partial "toc.html" . -}}
         </div>
 
