--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -1,5 +1,5 @@
 <!-- TOCs need to be declared explicitly in the front matter of content/*.md -->
-<aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-list-reset nested-links nested-copy-line-height">
+<aside class="fixed-lTK right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-list-reset nested-links nested-copy-line-height">
 	{{ if .Params.toc }}
 		<p class="b f4">目录</p>
   		{{ .TableOfContents }}
