--- a/layouts/partials/site-nav.html
+++ b/layouts/partials/site-nav.html
@@ -39,7 +39,7 @@
   </div>
 </nav>
 
-<nav class="w-100 bg-primary-color-dark fixed overflow-y-scroll bb b--dark-gray">  
+<nav id="ac-globalnav" class="w-100 bg-primary-color-dark fixed overflow-y-scroll bb b--dark-gray">  
     <div class="top-0 dn-l w-100">
         {{- partial "nav-mobile.html" . -}}
     </div>
