--- a/layouts/partials/nav-mobile.html
+++ b/layouts/partials/nav-mobile.html
@@ -1,5 +1,7 @@
+
 <div class="dn-l justify-between bg-primary-color-dark w-100 h-auto">
-  <button id="mobilemenu" onclick="mobilemenu()"  class="js-toggle querybtn v-mid link flex-auto dib dn-l f3 tl db ph3 white bg-transparent bn w-10" data-target=".globalmenu" style="font-family:segmdl2">&#xE700</button>
+
+  <button id="mobilemenubutton" onclick="mobilemenubutton()" aria-expanded="false" class="js-toggle querybtn v-mid link flex-auto dib dn-l f3 tl db ph3 white bg-transparent bn w-10" data-target=".globalmenu" ></button>
 
   <div class="link flex-auto dib db dn-l tc v-mid w-80">
         {{ partial "svg/senboll-logo.svg" (dict "size" "32px" "class" "v-mid pt1 pb1") }}
@@ -8,8 +10,7 @@
   <!-- <button class="js-toggle flex-auto dib dn-l f6 tc db mt4-ns ph3 pv2 link white bg-primary-color-dark hover-bg-primary-color ba b--white-40 w-auto" data-target=".docsmenu">文档目录</button> -->
 </div>
 
-
-<div  class="globalmenu mobilemenu pb2 dn bg-primary-color-dark w-auto vh-100">
+<div aria-expanded="false" id="mobilemenu" class="globalmenu mobilemenu pb2 dn bg-primary-color-dark w-auto vh-100">
   {{ partial "nav-links-global-mobile.html" . }}
 </div>
 <!-- 
