--- a/static/css/common.css
+++ b/static/css/common.css
@@ -90,18 +90,18 @@ h6:before {
 } 
 
 
-#mobilemenu[aria-expanded='true'] {
+#mobile-menu[aria-expanded='true'] {
     display:inline;
 }
-#mobilemenu {
+#mobile-menu {
     display: none;
 }
 
-#mobilemenubutton[aria-expanded='true']::before {
+#mobile-menu-button[aria-expanded='true']::before {
     font-family: "segmdl2";
     content: "\E711";
 }
-#mobilemenubutton::before {
+#mobile-menu-button::before {
     font-family: "segmdl2";
     content: "\E700";
 }
