--- a/layouts/partials/nav-mobile.html
+++ b/layouts/partials/nav-mobile.html
@@ -1,6 +1,6 @@
 
 <div class="dn-l justify-between bg-primary-color-dark w-100 h-auto">
-  <button id="mobile-menu-button" onclick="mobilemenubutton()" aria-expanded="false" class="querybtn v-mid link flex-auto dib dn-l f3 tl db ph3 white bg-transparent bn w-10"></button>
+  <button id="mobile-menu-button" onclick="mobilemenubutton_onclick()" aria-expanded="false" class="querybtn v-mid link flex-auto dib dn-l f3 tl db ph3 white bg-transparent bn w-10"></button>
   <div class="link flex-auto dib db dn-l tc v-mid w-80">
         {{ partial "svg/senboll-logo.svg" (dict "size" "32px" "class" "v-mid pt1 pb1") }}
   </div>
