--- a/layouts/shortcodes/tip.html
+++ b/layouts/shortcodes/tip.html
@@ -1,5 +1,5 @@
 {{ $_hugo_config := `{ "version": 1 }` }}
-<aside class="flex pt2 pb2 pl2 pr2 w-100 bg-near-white">
+<aside class="flex mt2 pt2 pb2 pl2 pr2 w-100 bg-near-white">
 	<div class="pr2">
 		{{partial "svg/tips.svg"  (dict "size" "30px")}}
 	</div>
