--- a/layouts/partials/nav-links-global-mobile.html
+++ b/layouts/partials/nav-links-global-mobile.html
@@ -1,7 +1,7 @@
 {{ $currentPage := . }}
 {{ $menu := .Site.Menus.global }}
 {{ $menuDocs := .Site.Menus.docs.ByWeight }}
-<ul class="list hidden dib scrolling-touch tc mb6 w-100 pa0 mh4 pr5">
+<ul class="list hidden dib scrolling-touch tc mb6 w-100">
   <li class="tl dib hover-bg-black w-100 bb b--mid-gray ">
       <a href="{{.Site.BaseURL}}" class="ttu f6 link primary-color-light overflow hover-white db brand-font w-100 pv1 pl2">
         主页
