--- a/layouts/page/about.html
+++ b/layouts/page/about.html
@@ -1,9 +1,9 @@
 
 {{ define "main" }}
-  <section class="center pb4 pb5-l ph4-l pt3 pt6-ns  min-vh-100 bg-primary-color-dark">
-    <div class="lh-copy f5 f4-l white-80  w-90-ns w-90 w-90-l center fw2 tl tl-ns">
+  <section class="center pb4 pb5-l ph4-l pt3 pt6-ns min-vh-100 bg-primary-color-dark">
+    <div class="lh-copy f5 f4-l white-80  w-90-ns w-90 w-90-l center fw2 tl tl-ns mw8 justify">
       {{ with .Site.Params.description }}
-      <p class="tl f1 f1-l fw4 white-80 m0 w-90-ns lh-title pt2 pb3 pv0-ns">
+      <p class="f1 f1-l fw4 white-80 m0 2h-title pt3 pb3 pv0-ns tc">
         {{ . }}
       </p>
       {{ end }}
