--- a/layouts/partials/custom-footer.html
+++ b/layouts/partials/custom-footer.html
@@ -1,5 +1,5 @@
 
-<p align="center" class="light-gray">
+<p class="light-gray tc">
   <a class="dim link blue pv2 nowrap" href="http://www.paradox.com">英文官网</a> | 
   <a class="dim link blue pv2 nowrap" href="http://www.senboll.com">中文官网</a> | 
   <a class="dim link blue pv2 nowrap" href="http://support.senboll.com:8888/help">帮助中心</a> | 
