--- a/layouts/partials/site-nav.html
+++ b/layouts/partials/site-nav.html
@@ -1,16 +1,16 @@
 {{ $currentPage := . }}
 <nav class="bg-primary-color-dark fixed pv4 w-100 dn dib-l bb b--dark-gray" role="navigation">
 
-  <div class="center flex-ns w-90-ns w-90 w-90-l flex-wrap items-center justify-start">
+  <div class="center flex-ns flex-wrap items-center justify-center w-auto">
     
-    <h1 class="dim f4 lh-solid ml0-ns mr0 mr4-l mv0 pl3 pl4-ns dn dib-l">
+    <h1 class="dim f4 lh-solid ml0-ns mr0 mr5-l mv0 pl3 pl4-ns dn dib-l">
       <a href="{{ .Site.BaseURL }}" class="link white">
         {{ partial "svg/senboll-logo.svg" (dict "size" "48px" ) }}
       </a>
     </h1>
     <ul class="list ma0 pa0 dn dib-l">
       {{ range .Site.Menus.global }}
-        <li class="f4 dib mr4" role="menuitem">
+        <li class="f4 dib mr4 ml2" role="menuitem">
             {{/* TODO: Create an "Global" active class to show which site one is currently at */}}
           <a href="{{ .URL }}" class="dim link{{ if $currentPage.IsMenuCurrent "global" . }} gray {{else}} light-silver{{ end }}">
             {{ .Name }}
@@ -26,7 +26,7 @@
       {{ end }}
     </ul>
 
-    <div class="db dib-ns pl3">
+    <div class="db dib-ns ">
       {{if not .Site.Params.isDisableSearch}}
         {{- partial "site-search.html" . -}}
       {{end}}
