--- a/layouts/shortcodes/note.html
+++ b/layouts/shortcodes/note.html
@@ -1,8 +1,8 @@
 {{ $_hugo_config := `{ "version": 1 }` }}
 <aside class="admonition note">
-	<div class="note-icon">
+<!-- 	<p class="note-icon">
 		{{partial "svg/exclamation.svg" (dict "size" "30px" ) }}
-	</div>
+	</p> -->
 	<!-- <h2 id="{{if .Get 0}}{{.Get 0 | urlize}}{{else}}note{{end}}">{{if .Get 0}}{{.Get 0 | markdownify}}{{else}}Note{{end}}</h2> -->
 	<!-- <h3>Note</h3> -->
 	<div class="admonition-content">{{- .Inner -}}</div>
