--- a/layouts/shortcodes/tip.html
+++ b/layouts/shortcodes/tip.html
@@ -1,9 +1,9 @@
 {{ $_hugo_config := `{ "version": 1 }` }}
 <aside class="flex mt2 pt2 pb2 pl2 pr2 w-100 bg-near-white">
-	<div class="pr2">
+	<p class="pr2">
 		{{partial "svg/tips.svg"  (dict "size" "30px")}}
-	</div>
+	</p>
 	<!-- <h2 id="{{if .Get 0}}{{.Get 0 | urlize}}{{else}}tip{{end}}">{{if .Get 0}}{{.Get 0 | markdownify}}{{else}}Tip{{end}}</h2> -->
 	<!-- <h3>Tip</h3> -->
-	<div class="pl2">{{- .Inner -}}</div>
+	<p class="pr2">{{- .Inner -}}</p>
 </aside>
