--- a/static/css/common.css
+++ b/static/css/common.css
@@ -105,3 +105,8 @@ h6:before {
     font-family: "segmdl2";
     content: "\E700";
 }
+
+p {
+    text-align: justify;
+    text-justify: inter-character
+}
