--- a/layouts/partials/site-nav.html
+++ b/layouts/partials/site-nav.html
@@ -26,7 +26,7 @@
       {{ end }}
     </ul>
 
-    <div class="db dib-ns ">
+    <div class="db dib-ns pl3">
       {{if not .Site.Params.isDisableSearch}}
         {{- partial "site-search.html" . -}}
       {{end}}
