--- a/static/css/common.css
+++ b/static/css/common.css
@@ -106,7 +106,11 @@ h6:before {
     content: "\E700";
 }
 
-p{
+p {
     text-align: justify;
     text-justify: inter-character
+}
+
+em {
+    color: red;
 }
