--- a/layouts/partials/site-nav.html
+++ b/layouts/partials/site-nav.html
@@ -1,46 +1,57 @@
 {{ $currentPage := . }}
-<nav class="bg-primary-color-dark fixed pv4 w-100 dn dib-l bb b--dark-gray" role="navigation">
 
-  <div class="center flex-ns flex-wrap items-center justify-center w-auto">
-    
-    <h1 class="dim f4 lh-solid ml0-ns mr0 mr5-l mv0 pl3 pl4-ns dn dib-l">
-      <a href="{{ .Site.BaseURL }}" class="link white">
-        {{ partial "svg/senboll-logo.svg" (dict "size" "48px" ) }}
-      </a>
-    </h1>
-    <ul class="list ma0 pa0 dn dib-l">
-      {{ range .Site.Menus.global }}
-        <li class="f4 dib mr4 ml2" role="menuitem">
-            {{/* TODO: Create an "Global" active class to show which site one is currently at */}}
-          <a href="{{ .URL }}" class="dim link{{ if $currentPage.IsMenuCurrent "global" . }} gray {{else}} light-silver{{ end }}">
-            {{ .Name }}
-              {{/* using ".Post" from the menu system to determine if we should show an icon for external links */}}
-            {{ $post_status := printf "%s" .Post }}
-            {{ if eq $post_status "external" }}
-              <span class="pl1">
-                {{ partial "svg/link-ext.svg" (dict "size" "10") }}
-              </span>
-            {{ end }}
-          </a>
-        </li>
-      {{ end }}
-    </ul>
 
-    <div class="db dib-ns pl3">
-      {{if not .Site.Params.isDisableSearch}}
-        {{- partial "site-search.html" . -}}
-      {{end}}
-    </div>
 
-    <span class="absolute mt1 mt2-l pr3 right-0 top-0 dn dib-l">
-      {{- partialCached "social-follow.html" . -}}
-    </span>
+<nav class="flex center w-100 bg-primary-color-dark" role="navigation">
 
+  <div class="pv4 center items-center justify-center w-auto dn-lx dib-l">
+      <div class="center items-center justify-center w-auto"> 
+          <div class="flex">
+              <h1 class="dim f4 lh-solid ml0-ns mr0 mr3-l mv0 pr4 pl4-ns">
+                <a href="{{ .Site.BaseURL }}" class="link white">
+                  {{ partial "svg/senboll-logo.svg" (dict "size" "48px" ) }}
+                </a>
+              </h1>
+              <ul class="list ma0 pa0 mv2">
+                {{ range .Site.Menus.global }}
+                  <li class="f4 dib mr4 ml4" role="menuitem">
+                      {{/* TODO: Create an "Global" active class to show which site one is currently at */}}
+                    <a href="{{ .URL }}" class="dim link{{ if $currentPage.IsMenuCurrent "global" . }} gray {{else}} light-silver{{ end }}">
+                      {{ .Name }}
+                        {{/* using ".Post" from the menu system to determine if we should show an icon for external links */}}
+                      {{ $post_status := printf "%s" .Post }}
+                      {{ if eq $post_status "external" }}
+                        <span class="pl1">
+                          {{ partial "svg/link-ext.svg" (dict "size" "5") }}
+                        </span>
+                      {{ end }}
+                    </a>
+                  </li>
+                {{ end }}
+              </ul>
+      
+          </div>     
+      </div>  
   </div>
+<!-- 
+  <span class="pv4 absolute mt1 mt2-l pr3 right-0 top-0 dn dib-l">
+  {{- partialCached "social-follow.html" . -}}
+  </span> -->
+
+  <div id="menu-search-input" aria-hidden="true" aria-expanded="false" class="pr5 pv4 dn-m dn-ns">
+    {{if not .Site.Params.isDisableSearch}}
+      {{- partial "site-search.html" . -}}
+    {{end}}
+  </div>  
+
+  <div id="nav-mobile" aria-expanded="false" class="top-0 dn-l w-100">
+    {{- partial "nav-mobile.html" . -}}
+  </div>
+
 </nav>
 
-<nav id="ac-globalnav" class="w-100 bg-primary-color-dark fixed overflow-y-scroll bb b--dark-gray">  
-    <div class="top-0 dn-l w-100">
-        {{- partial "nav-mobile.html" . -}}
-    </div>
+<!-- 
+<nav class="pv4 dn dib-l bb b--dark-gray" role="navigation">
 </nav>
+<nav class="overflow-y-scroll bb b--dark-gray">
+</nav> -->
