--- a/layouts/partials/home-page-sections/features-single.html
+++ b/layouts/partials/home-page-sections/features-single.html
@@ -2,7 +2,7 @@
   {{ range .Params.sections }}
   {{ $.Scratch.Add "i" 1 }}{{ $i := $.Scratch.Get "i" }}
 
-    <section class="w-100  ph4 ph5-ns pv6 pv6-ns mid-gray {{ .color_classes }}">
+    <section class="w-100  ph4 ph5-ns pv4 pv6-l mid-gray {{ .color_classes }}">
       <div class="flex-ns flex-wrap center mw9">
 
         <div class="w-100">
