--- a/layouts/partials/nav-mobile.html
+++ b/layouts/partials/nav-mobile.html
@@ -17,7 +17,7 @@
   <!-- <button class="js-toggle flex-auto dib dn-l f6 tc db mt4-ns ph3 pv2 link white bg-primary-color-dark hover-bg-primary-color ba b--white-40 w-auto" data-target=".docsmenu">文档目录</button> -->
 </div>
 
-<div aria-expanded="false" id="mobile-menu" class="globalmenu mobilemenu pb2 dn bg-primary-color-dark w-auto vh-100">
+<div aria-expanded="false" id="mobile-menu" class="globalmenu mobilemenu pb2 dn bg-primary-color-dark w-auto">
   {{ partial "nav-links-global-mobile.html" . }}
 </div>
 
