--- a/layouts/partials/nav-mobile.html
+++ b/layouts/partials/nav-mobile.html
@@ -1,5 +1,5 @@
 
-<div class="dn-l flex justify-between bg-primary-color-dark w-100 h-auto">
+<div class="dn-l flex justify-between bg-primary-color-dark w-100 h-auto pt1">
   <button id="mobile-menu-button" onclick="mobileMenuButtonOnclick()" aria-expanded="false" aria-hidden="false" 
     class="querybtn v-mid link dib dn-l f3 tl db ph3 white bg-transparent bn"></button>
   <div id="mobile-menu-logo" aria-hidden="false" class="link dib db dn-l tc v-mid w-80">
