--- a/layouts/partials/nav-links-global-mobile.html
+++ b/layouts/partials/nav-links-global-mobile.html
@@ -2,24 +2,29 @@
 {{ $menu := .Site.Menus.global }}
 {{ $menuDocs := .Site.Menus.docs.ByWeight }}
 <ul class="list hidden dib scrolling-touch tc mb3 w-100">
-  <li class="tl dib hover-bg-black w-100 bb b--mid-gray ">
+  <li class="tl dib hover-bg-black w-100 bb b--mid-gray pv2">
       <a href="{{.Site.BaseURL}}" class="ttu f6 link primary-color-light overflow hover-white db brand-font w-100 pv1 pl2">
         主页
       </a>
   </li>
   {{ range $menu }}
-    <li  class="tl dib hover-bg-black w-100 bb b--mid-gray">
-        <a href="{{.URL}}" class="f6 link primary-color-light overflow hover-white db brand-font w-100 pv1 pl2 {{if $currentPage.IsMenuCurrent "main" . }} bg-primary-color{{end}}">
-          {{ .Name }}
-        </a>
+    <li  class="tl dib hover-bg-black w-100 bb b--mid-gray pv2">
+        <div class="flex">
+            <a href="{{.URL}}" class="f6 link primary-color-light overflow hover-white db brand-font w-100 pv1 pl2 {{if $currentPage.IsMenuCurrent "main" . }} bg-primary-color{{end}}">
+              {{ .Name }}
+            </a>
+            {{if eq .Name "文档中心"  }}
+            <button id="mobile-submenu-button-docs" onclick="mobileSubMenuButtonDocsOnclick()" aria-expanded="false" 
+              class="querybtn v-mid link dib dn-l f4 tr db ph3 white bg-transparent bn"></button> 
+            {{- end}}   
+        </div>
         {{if eq .Name "文档中心"  }}
-          <ul class="list dib scrolling-touch tc pl4">
+          <ul id="mobile-submenu-docs" aria-expanded="false" class="list dib scrolling-touch tc pl4">
             {{ range $menuDocs }}{{ $post := printf "%s" .Post }}
               <li  class="tl dib  hover-bg-black w-100">
                   <a href="{{.URL}}" class="f7 link primary-color-light  hover-white db brand-font mt1  w-100 pv0 pl3{{if $currentPage.IsMenuCurrent "main" . }} bg-primary-color{{end}}">
                     {{ .Name }}
-                  </a>      
-
+                  </a>
                   {{- if .HasChildren }}
                   <ul class="list dib scrolling-touch tc">
                     {{- range .Children }}
@@ -36,8 +41,7 @@
                       {{ end }}
                     {{- end}}
                   </ul>        
-                  {{- end}} 
-                  
+                  {{- end}}                   
               </li>
             {{end}}
           </ul>
