--- a/static/css/common.css
+++ b/static/css/common.css
@@ -113,6 +113,21 @@ h6:before {
     font-family: "segmdl2";
     content: "\E700";
 }
+#mobile-submenu-button-docs[aria-expanded='true']::before {
+    font-family: "segmdl2";
+    content: "\E70D";
+}
+#mobile-submenu-button-docs[aria-expanded='false']::before {
+    font-family: "segmdl2";
+    content: "\E70E";
+}
+#mobile-submenu-docs[aria-expanded='false'] {
+    display: none;
+}
+#mobile-submenu-docs {
+    display: block;    
+}
+
 
 #mobile-search-button[aria-expanded='true']::before {
     font-family: "segmdl2";
