--- a/layouts/partials/nav-mobile.html
+++ b/layouts/partials/nav-mobile.html
@@ -1,9 +1,9 @@
 
-<div class="dn-l flex justify-between bg-primary-color-dark w-100 h-auto pt1">
+<div class="dn-l flex justify-between bg-primary-color-dark w-100 h-auto pv1">
   <button id="mobile-menu-button" onclick="mobileMenuButtonOnclick()" aria-expanded="false" aria-hidden="false" 
-    class="querybtn v-mid link dib dn-l f3 tl db ph3 white bg-transparent bn"></button>
+    class="querybtn dib dn-l f4 tc db pl3 pt1 white bg-transparent bn"></button>
   <div id="mobile-menu-logo" aria-hidden="false" class="link dib db dn-l tc v-mid w-80">
-        {{ partial "svg/senboll-logo.svg" (dict "size" "32px" "class" "v-mid pt1 pb1") }}
+        {{ partial "svg/senboll-logo.svg" (dict "size" "30px" "class" "v-mid") }}
   </div>
 <!-- 
   <div id="mobile-search-input" aria-hidden="true" class="db dib-ns pl3 w-90 pv2">
@@ -13,7 +13,7 @@
   </div> -->
 
   <button id="mobile-search-button" onclick="mobileSearchButtonOnclick()" aria-expanded="false" 
-    class="querybtn v-mid link dib dn-l f3 tr db pr3 white bg-transparent bn"></button>
+    class="querybtn v-mid link dib dn-l f4 tr db pr3 pt1 white bg-transparent bn"></button>
   <!-- <button class="js-toggle flex-auto dib dn-l f6 tc db mt4-ns ph3 pv2 link white bg-primary-color-dark hover-bg-primary-color ba b--white-40 w-auto" data-target=".docsmenu">文档目录</button> -->
 </div>
 
