--- a/layouts/partials/pagelayout.html
+++ b/layouts/partials/pagelayout.html
@@ -1,12 +1,9 @@
 {{ $section_to_display := .section_to_display  }}
 <div class="w-100 ph4 pb5 pb6-ns pt1 mt0 pt3-ns">
 
-  <div class="flex mt6">
-    <div class="dn db-l w-20">
-        {{ partial "nav-links-docs.html" .context }}
-    </div>
+  <div class="flex-l mt4">
 
-    <div class="w-100 w-80-l ph0 ph4-l">
+    <div class="order-1 w-100 w-80-l ph0 ph4-l">
       <article class="w-100 nested-copy-line-height nested-links nested-img">
         <h1 class="primary-color-dark f2">
           {{ with $.context.Data.Singular }}{{ . | humanize }}: {{ end }}{{ .context.Title }}
@@ -27,6 +24,10 @@
         </section>
       </div>
 
+    </div>
+
+    <div class="order-0 db-l w-100 w-20-l">
+        {{ partial "nav-links-docs.html" .context }}
     </div>
 
   </div>
