--- a/layouts/partials/site-manifest.html
+++ b/layouts/partials/site-manifest.html
@@ -1,6 +1,6 @@
 
-<link rel="apple-touch-icon" href="{{ .Site.BaseURL }}{{ .Site.Params.logoicon }}"}}>
-<link rel="icon" type="image/png" href="{{ .Site.BaseURL }}{{ .Site.Params.logoicon }}">
+<link rel="apple-touch-icon" href="{{ .Site.BaseURL }}images/logo-senboll.png"}}>
+<link rel="icon" type="image/png" href="{{ .Site.BaseURL }}images/logo-senboll.png">
 <!-- <link rel="manifest" href="/manifest.json"> -->
 <link rel="mask-icon" href="'{{ partial "svg/senboll-logo.svg" (dict "size" "16px") }}'" color="#0594cb">
 <meta name="theme-color" content="#ffffff">
