--- a/layouts/shortcodes/tip.html
+++ b/layouts/shortcodes/tip.html
@@ -5,5 +5,5 @@
 	</p>
 	<!-- <h2 id="{{if .Get 0}}{{.Get 0 | urlize}}{{else}}tip{{end}}">{{if .Get 0}}{{.Get 0 | markdownify}}{{else}}Tip{{end}}</h2> -->
 	<!-- <h3>Tip</h3> -->
-	<p class="pr2">{{- .Inner | markdownify -}}</p>
+	<div class="pr2">{{- .Inner | markdownify -}}</div>
 </aside>
