--- a/layouts/shortcodes/warning.html
+++ b/layouts/shortcodes/warning.html
@@ -5,5 +5,5 @@
 	</p>
 	 <!-- <h2 id="{{if .Get 0}}{{.Get 0 | urlize}}{{else}}warning{{end}}">{{if .Get 0}}{{.Get 0 | markdownify}}{{else}}Warning{{end}}</h2> 
 	 <h3>Warning</h3>  -->
-	<p class="pr2">{{- .Inner | markdownify -}}</p>
+	<div class="pr2">{{- .Inner | markdownify -}}</div>
 </aside>
