--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,10 @@
 {{ define "main" }}
+
+<div class="order-3 bg-white black db dn-l w-100 ">
+    {{- partial "nav-links-docs-mobile.html" . -}}
+</div>
   <article class="w-100 ph4 pb5 pb6-ns pt1 pt5-ns">
+
     <div class="flex-l">
 
       <div class="order-2 w-100 w-20-l ph5-m ph0-l mb4 fixed-l right-0-l">
