--- a/layouts/partials/pagelayout.html
+++ b/layouts/partials/pagelayout.html
@@ -1,8 +1,11 @@
 {{ $section_to_display := .section_to_display  }}
+
+<div class="bg-white black db dn-l w-100 ">
+    {{ partial "nav-links-docs-mobile.html" .context }}
+</div>
+
 <div class="w-100 ph4 pb5 pb6-ns pt1 mt0 pt3-ns">
-
   <div class="flex-l mt4">
-
     <div class="order-1 w-100 w-80-l ph0 ph4-l">
       <article class="w-100 nested-copy-line-height nested-links nested-img">
         <h1 class="primary-color-dark f2">
@@ -25,11 +28,8 @@
       </div>
 
     </div>
-
-    <div class="order-0 db-l w-100 w-20-l">
+    <div class="order-0 db-l dn w-20-l">
         {{ partial "nav-links-docs.html" .context }}
     </div>
-
   </div>
-
 </div>
