--- a/layouts/partials/nav-links-global-mobile.html
+++ b/layouts/partials/nav-links-global-mobile.html
@@ -1,19 +1,19 @@
 {{ $currentPage := . }}
 {{ $menu := .Site.Menus.global }}
 {{ $menuDocs := .Site.Menus.docs.ByWeight }}
-<ul class="list hidden dib scrolling-touch tc mb3 w-100 vh-100">
+<ul class="list dib scrolling-touch tc mb3 w-100 ph3 mv2 pa0 ma0">
   {{ range $menu }}
     <li  class="tl dib hover-bg-black w-100 bb b--mid-gray pv2">
         <div class="flex">
             <a href="{{.URL}}" class="f6 link primary-color-light overflow hover-white db brand-font w-100 pv1 pl2 {{if $currentPage.IsMenuCurrent "main" . }} bg-primary-color{{end}}">
               {{ .Name }}
             </a>
-            {{if eq .Name "文档中心"  }}
+            <!-- {{if eq .Name "文档中心"  }}
             <button id="mobile-submenu-button-docs" onclick="mobileSubMenuButtonDocsOnclick()" aria-expanded="false" 
               class="querybtn v-mid link dib dn-l f6 tr db ph3 white bg-transparent bn"></button> 
-            {{- end}}   
+            {{- end}}    -->
         </div>
-        {{if eq .Name "文档中心"  }}
+        <!-- {{if eq .Name "文档中心"  }}
           <ul id="mobile-submenu-docs" aria-expanded="false" class="list dib scrolling-touch tc pl4">
             {{ range $menuDocs }}{{ $post := printf "%s" .Post }}
               <li  class="tl dib  hover-bg-black w-100">
@@ -40,7 +40,7 @@
               </li>
             {{end}}
           </ul>
-        {{end}}
+        {{end}} -->
     </li>
   {{end}}
 </ul>
