--- a/assets/output/css/app.css
+++ b/assets/output/css/app.css
@@ -4956,17 +4956,17 @@ small, .font_small {font-size: 0.8em;}
     border: 1px solid rgb(1, 102, 102)
 }
 .prose table th {
-  background-color: rgb(1, 102, 102);
-  border: 1px solid rgb(1, 102, 102);
-  color: white;
-  font-weight: 400;
+  background-color: rgb(240, 240, 240);
+  border: 1px solid rgb(190, 190, 190);
+  color: rgb(61, 61, 61);
+  font-weight: 600;
   text-align: left;
   padding: .25em .5em;
 }
 .prose table td, .prose table tc {
   padding: .25em .5em;
   text-align: left;
-  border: 1px solid #0594CB;
+  border: 1px solid rgb(190, 190, 190);
 }
 .prose table tr:nth-child(even) {
   background-color: rgb(255, 255, 255);
