--- a/layouts/page/about.html
+++ b/layouts/page/about.html
@@ -1,13 +1,13 @@
 
 {{ define "main" }}
   <section class="center pb4 pb5-l ph4-l pt3 pt3-ns black-70">
-    <div class="lh-copy f5 f4-l w-90-ns w-90 w-90-l center fw2 tl tl-ns mw9 justify">
+    <div class="f5 f4-l w-90-ns w-90 w-90-l center fw2 tl tl-ns mw9 justify">
       {{ with .Site.Params.description }}
       <p class="f3 f1-l fw4 m0 2h-title pt3 pb3 pv0-ns tc lh-copy">
         {{ . }}
       </p>
       {{ end }}
-      <div class="about">
+      <div class="lh-copy-l">
           {{ .Content }}
       </div>
     </div>
