--- a/layouts/shortcodes/tip.html
+++ b/layouts/shortcodes/tip.html
@@ -1,8 +1,8 @@
 {{ $_hugo_config := `{ "version": 1 }` }}
-<aside class="flex mt2 pt2 pb2 pl2 pr2 w-100 bg-near-white">
-	<p class="pr2">
+<aside class="flex mt2 pt2 pb2 pl2 pr2 w-auto bg-near-white">
+	<div class="pr2">
 		{{partial "svg/tips.svg"  (dict "size" "30px")}}
-	</p>
+	</div>
 	<!-- <h2 id="{{if .Get 0}}{{.Get 0 | urlize}}{{else}}tip{{end}}">{{if .Get 0}}{{.Get 0 | markdownify}}{{else}}Tip{{end}}</h2> -->
 	<!-- <h3>Tip</h3> -->
 	<div class="pr2">{{- .Inner | markdownify -}}</div>
