--- a/layouts/shortcodes/warning.html
+++ b/layouts/shortcodes/warning.html
@@ -1,5 +1,5 @@
 {{ $_hugo_config := `{ "version": 1 }` }}
-<aside class="flex mt2 pt2 pb2 pl2 pr2 w-100 bg-washed-red">
+<aside class="flex mt2 pt2 pb2 pl2 pr2 w-auto bg-washed-red">
 	<div class="pr2">		
 		{{ partial "svg/warning2.svg" (dict "size" "30px") }}
 	</div>
